syntax = "proto3";

package playback;

option go_package = "github.com/krtirtho/rowdy/rowdy_beep/proto";

// Interface exported by the server.
service Playback {
  // A simple RPC.
  //
  // Obtains the feature at a given position.
  //
  // A feature with an empty name is returned if there's no feature at the given
  // position.
  rpc GetHello(Empty) returns (Msg) {}
  rpc Play(Path) returns (Duration) {}
  rpc Pause(Empty) returns (Empty) {}
  rpc Resume(Empty) returns (Empty) {}
  rpc Stop(Empty) returns (Empty) {}
  rpc TogglePlayback(Empty) returns (Empty) {}
  rpc GetVolume(Empty) returns (Volume) {}
  rpc SetVolume(Volume) returns (Empty) {}
  rpc GetSpeed(Empty) returns (Speed) {}
  rpc SetSpeed(Speed) returns (Empty) {}
}

message Empty {}
message Msg { string msg = 1; }

message Volume { double volume = 1; }
message Duration { int64 milliseconds = 1; }
message Speed { double speed = 1; }

message Path {
  string path = 1;
  string cwd = 2;
  bool isAbsolute = 3;
}